--- a/cornershop-backend-test/docker-compose.yml
+++ b/cornershop-backend-test/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - APP=backend_test
       - QUEUES=celery
       - PYTHONDONTWRITEBYTECODE=1
+      - SLACK_TOKEN=xoxb-2554292256262-3910755907301-TubJ7VcRK0ZhQ6r9LWEpCVTC
+      - BASE_URL=localhost:8000
       # forwarded from the host if they exist
       - UPDATE_PYTHON_REQUIREMENTS_ON_CONTAINERSTART
     volumes:
