--- a/cornershop-backend-test/docker-compose.yml
+++ b/cornershop-backend-test/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - QUEUES=celery
       - PYTHONDONTWRITEBYTECODE=1
       - SLACK_TOKEN=xoxb-2554292256262-3910755907301-p6AbUOyIhyIIigNaNDeb0n8m
-      - BASE_URL=localhost:8000
+      - BASE_URL=http://localhost:8000
       # forwarded from the host if they exist
       - UPDATE_PYTHON_REQUIREMENTS_ON_CONTAINERSTART
     volumes:
