--- a/cornershop-backend-test/docker-compose.yml
+++ b/cornershop-backend-test/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - APP=backend_test
       - QUEUES=celery
       - PYTHONDONTWRITEBYTECODE=1
-      - SLACK_TOKEN=xoxb-2554292256262-3910755907301-p6AbUOyIhyIIigNaNDeb0n8m
+      - SLACK_TOKEN=
       - BASE_URL=http://localhost:8000
       # forwarded from the host if they exist
       - UPDATE_PYTHON_REQUIREMENTS_ON_CONTAINERSTART
